--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -16,6 +16,10 @@ $font-size-lg: 18px;
 $font-size-xl: 22px;
 
 // Colors //
+
+$error_red: rgba(147, 8, 16, 0.42);
+$success_green: #159215;
+
 $gray-darkest: #282828;
 $gray-dark: #515554;
 $gray-medium: #7c8281;
